# opencv-lab-work

Lab1Apr/: main.cpp
Lab3March/: CMakeLists.txt  main.cpp
Lab7March/: main.cpp
Lab8Apr/: CMakeLists.txt  main.cpp
